fixing horizontal scroll, username and logout button

--- a/exway/static/css/style.css
+++ b/exway/static/css/style.css
@@ -43,3 +43,7 @@ th.amount, td.amount {
 .bs-callout-title {
   border-color: #5cb85c;
 }
+
+.navbar-form.navbar-right:last-child {
+  margin-right: 0;
+}
